tests/paczka1/fuzzy1/11897807.err
Error in line 3: iI2sY S793 68,1
Error in line 5: iI2sY A779 87,4
Error in line 9: TDT S793 38,4
Error in line 14: S793 S793 96,99
Error in line 17: S793 S793 404,1
Error in line 13: PghA S793 64,8
Error in line 26: PghA A779 8,7
Error in line 34: S793 S472 99,7
Error in line 33: SysP7FV2 S542 45,3
Error in line 39: PghA S472 40,9
